Archive2/43/284d2852274fb5/output
main.cpp:10:12: error: unknown type name 'points'; did you mean 'point'?
    while (points >> n1 >> n2){//for each element the user enters,  
           ^~~~~~
           point
main.cpp:2:8: note: 'point' declared here
struct point{double x; double y;};
       ^
main.cpp:10:19: error: expected unqualified-id
    while (points >> n1 >> n2){//for each element the user enters,  
                  ^
main.cpp:10:19: error: variable declaration in condition must have an initializer
3 errors generated.
